<resources>
    <string name="app_name">LYCOMMUNITY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_title">Email</string>
    <string name="example_mail_com_ph">example@mail.com.ph</string>
    <string name="password_title">Password</string>
    <string name="enter_password">enter password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_as_guest">Sign In As Guest</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register_password">Register Password</string>
    <string name="register_email">Register Email</string>
    <string name="register_department">Register Department</string>
    <string name="department">Department</string>
    <string name="register_last_name">Register Last Name</string>
    <string name="last_name">Last Name</string>
    <string name="register_first_name">Register First Name</string>
    <string name="name">Name</string>
    <string name="sign_in_as_admin">Sign In as ADMIN</string>

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="reset_password">Reset Password</string>
    <string name="announcement_title">Announcement Title</string>
    <string name="announcement_description">Announcement Description</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="user_id">User ID</string>
    <string name="this_is_a_comment">This is a comment</string>
    <string name="event_title">Event Title</string>
    <string name="event_description">Event Description</string>
    <string name="comment">Comment</string>
    <string name="post">Post</string>
    <string name="write_a_comment">Write a comment...</string>


</resources>