<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/comment_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_id"
        android:textStyle="bold"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/comment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_is_a_comment"
        android:textSize="16sp"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/comment_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_time"
        android:textSize="12sp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="4dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>