<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:layout_editor_absoluteY="25dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="25dp" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo2"
            app:layout_constraintEnd_toStartOf="@id/guide_right"
            app:layout_constraintStart_toEndOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/guide_top" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toStartOf="@id/guide_right"
            app:layout_constraintStart_toEndOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/image_logo">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/email_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:text="@string/email_title"
                    android:textColor="@color/core_text_color"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enter_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/example_mail_com_ph"
                    android:textColor="@color/core_text_color" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@id/guide_right"
            app:layout_constraintStart_toStartOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/input_layout_email">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/password_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:text="@string/password_title"
                    android:textColor="@color/core_text_color"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enter_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/enter_password"
                    android:textColor="@color/core_text_color" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_forgotPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@id/guide_right"
            app:layout_constraintStart_toEndOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/input_layout_password">


            <com.google.android.material.textview.MaterialTextView
                android:gravity="center"
                android:id="@+id/txt_forgot_password"
                android:layout_width="200dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/forgot_password" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_guest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@id/guide_right"
            app:layout_constraintStart_toEndOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/input_layout_forgotPassword">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_signIn_as_guest"
                android:layout_width="200dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/sign_in_as_guest"
                 />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/colorFb"
            android:text="@string/sign_in"
            android:textColor="@color/core_text_color"
            app:layout_constraintBottom_toTopOf="@id/input_layout_signUp"
            app:layout_constraintEnd_toStartOf="@id/guide_right"
            app:layout_constraintStart_toEndOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/input_layout_guest" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_signUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guide_right"
            app:layout_constraintStart_toEndOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/sign_in_button">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/don_t_have_an_account" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_go_to_signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/sign_up" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>