<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    tools:context=".ui.signup.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:layout_editor_absoluteY="25dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="25dp" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo2"
            app:layout_constraintEnd_toStartOf="@id/guide_right"
            app:layout_constraintStart_toEndOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/guide_top" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_idNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toStartOf="@id/guide_right"
            app:layout_constraintStart_toEndOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/image_logo">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/name_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:text="Student ID Number"
                    android:textColor="@color/core_text_color"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Input Student ID number"
                    android:textColor="@color/core_text_color" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_register_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toStartOf="@id/guide_right"
            app:layout_constraintStart_toEndOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/input_layout_idNumber">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textColor="@color/core_text_color"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_first_name"
                    android:textColor="@color/core_text_color" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_register_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@id/guide_right"
            app:layout_constraintStart_toStartOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/input_layout_register_name">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/last_name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:text="@string/last_name"
                    android:textColor="@color/core_text_color"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_last_name"
                    android:textColor="@color/core_text_color" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_register_department"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@id/guide_right"
            app:layout_constraintStart_toEndOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/input_layout_register_last_name">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/department_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:text="@string/department"
                    android:textColor="@color/core_text_color"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_department"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_department"
                    android:textColor="@color/core_text_color" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_register_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@id/guide_right"
            app:layout_constraintStart_toEndOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/input_layout_register_department">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/email_title_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:text="@string/email_title"
                    android:textColor="@color/core_text_color"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_email"
                    android:textColor="@color/core_text_color" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_register_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@id/guide_right"
            app:layout_constraintStart_toStartOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/input_layout_register_email">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/password_title_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:text="@string/password_title"
                    android:textColor="@color/core_text_color"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/register_password"
                    android:textColor="@color/core_text_color"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/colorFb"
            android:text="@string/sign_up"
            android:textColor="@color/core_text_color"
            app:layout_constraintBottom_toTopOf="@id/input_layout_already_had_an_account"
            app:layout_constraintEnd_toStartOf="@id/guide_right"
            app:layout_constraintStart_toEndOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/input_layout_register_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_already_had_an_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guide_right"
            app:layout_constraintStart_toEndOf="@id/guide_left"
            app:layout_constraintTop_toBottomOf="@id/sign_up_button">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_already_have_an_account"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/already_have_an_account" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/go_to_signIn"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/sign_in" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>